updated mobile navigation, fixed layout bugs

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -221,6 +221,7 @@ nav{
       grid-template-rows: repeat(3, 1fr);
       grid-row-gap: 20px;
       margin: 2rem;
+      height: initial;
       }
       
       .div1 { grid-area: 1 / 1 / 2 / 2; }
